First trained particle autoencoder

--- a/interactionClf/iClf_v0.ipynb
+++ b/interactionClf/iClf_v0.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional  as F"
+    "import torch.nn.functional as F"
    ]
   },
   {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,6 +545,13 @@
     "# f = open('TrainingHistory_VAE_all-in-one_v'+VAEversion+'.pkl', 'w')\n",
     "# pickle.dump(fit_report.history, f, pickle.HIGHEST_PROTOCOL)\n",
     "# f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Performances"
    ]
   },
   {
