dense v3 loss fixed

--- a/denseAE/dAE_v3.ipynb
+++ b/denseAE/dAE_v3.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:13.880058Z",
-     "start_time": "2019-07-07T20:04:13.877607Z"
+     "end_time": "2019-07-07T20:13:14.856999Z",
+     "start_time": "2019-07-07T20:13:14.854425Z"
     }
    },
    "outputs": [],
@@ -26,8 +26,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.205554Z",
-     "start_time": "2019-07-07T20:04:13.881670Z"
+     "end_time": "2019-07-07T20:13:15.235149Z",
+     "start_time": "2019-07-07T20:13:14.858582Z"
     }
    },
    "outputs": [
@@ -63,8 +63,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.406532Z",
-     "start_time": "2019-07-07T20:04:14.207344Z"
+     "end_time": "2019-07-07T20:13:15.438325Z",
+     "start_time": "2019-07-07T20:13:15.236955Z"
     }
    },
    "outputs": [
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[37mgpu-4-culture-plate-sm\u001b[m  Sun Jul  7 13:04:14 2019\n",
+      "\u001b[1m\u001b[37mgpu-4-culture-plate-sm\u001b[m  Sun Jul  7 13:13:15 2019\n",
       "\u001b[36m[0]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[1]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 27'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[2]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m  355\u001b[m / \u001b[33m 8114\u001b[m MB | \u001b[1m\u001b[30m4037\u001b[m(\u001b[33m345M\u001b[m)\n",
@@ -80,7 +80,7 @@
       "\u001b[36m[4]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[5]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 29'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[6]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 27'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
-      "\u001b[36m[7]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m 7141\u001b[m / \u001b[33m 8114\u001b[m MB | \u001b[1m\u001b[30m4037\u001b[m(\u001b[33m7131M\u001b[m)\n"
+      "\u001b[36m[7]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 26'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m 7141\u001b[m / \u001b[33m 8114\u001b[m MB | \u001b[1m\u001b[30m4037\u001b[m(\u001b[33m7131M\u001b[m)\n"
      ]
     }
    ],
@@ -97,8 +97,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.710414Z",
-     "start_time": "2019-07-07T20:04:14.408120Z"
+     "end_time": "2019-07-07T20:13:15.767717Z",
+     "start_time": "2019-07-07T20:13:15.439933Z"
     }
    },
    "outputs": [],
@@ -113,8 +113,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.716257Z",
-     "start_time": "2019-07-07T20:04:14.712084Z"
+     "end_time": "2019-07-07T20:13:15.774079Z",
+     "start_time": "2019-07-07T20:13:15.769384Z"
     }
    },
    "outputs": [],
@@ -129,8 +129,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.719878Z",
-     "start_time": "2019-07-07T20:04:14.717669Z"
+     "end_time": "2019-07-07T20:13:15.777658Z",
+     "start_time": "2019-07-07T20:13:15.775585Z"
     }
    },
    "outputs": [],
@@ -150,8 +150,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.730238Z",
-     "start_time": "2019-07-07T20:04:14.722033Z"
+     "end_time": "2019-07-07T20:13:15.790274Z",
+     "start_time": "2019-07-07T20:13:15.779847Z"
     }
    },
    "outputs": [],
@@ -164,8 +164,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:14.734275Z",
-     "start_time": "2019-07-07T20:04:14.731930Z"
+     "end_time": "2019-07-07T20:13:15.794463Z",
+     "start_time": "2019-07-07T20:13:15.792005Z"
     }
    },
    "outputs": [],
@@ -175,11 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.109546Z",
-     "start_time": "2019-07-07T20:04:14.735849Z"
+     "start_time": "2019-07-07T20:12:45.933Z"
     }
    },
    "outputs": [
@@ -194,20 +193,7 @@
       "QCD is limiting, using it for both val and split\n",
       "Expected 1.69M train\n",
       "Expected 1.69M val\n",
-      "\n",
-      "Loading Wlnu\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-c053b963a822>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadTrainSM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_train_max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2e6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcharge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSMMix_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/bigdata/shared/ocerri/ParticleBasedAnomalyDetection/lib/dataLoaders.py\u001b[0m in \u001b[0;36mloadTrainSM\u001b[0;34m(self, training_split_fraction, N_train_max)\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0mN_train_aux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_train\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSM_fraction\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN_train_SM\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mN_train_aux\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 71\u001b[0;31m             \u001b[0mx_train_s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraw_sample\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mN_train_aux\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN_part\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN_features\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     72\u001b[0m             \u001b[0mN_val_aux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN_val\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSM_fraction\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlimiting\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'qcd'\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'qcd'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\n"
      ]
     }
    ],
@@ -221,8 +207,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.111769Z",
-     "start_time": "2019-07-07T20:03:44.948Z"
+     "start_time": "2019-07-07T20:12:45.935Z"
     }
    },
    "outputs": [],
@@ -242,8 +227,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.113013Z",
-     "start_time": "2019-07-07T20:03:44.950Z"
+     "start_time": "2019-07-07T20:12:45.937Z"
     },
     "code_folding": [
      29,
@@ -309,14 +293,14 @@
     "        \n",
     "        # --- Formatting x ----\n",
     "        # pt\n",
-    "        pt = torch.exp(x_raw[:,:,0]).view(-1, self.No, 1)\n",
-    "        sig_pt = 1. + F.elu(x_raw[:,:,1]).view(-1, self.No, 1)\n",
+    "        pt = 1. + F.elu(x_raw[:,:,0]).view(-1, self.No, 1)\n",
+    "        sig_pt = 1. + 1e-6 + F.elu(x_raw[:,:,1]).view(-1, self.No, 1)\n",
     "        # eta\n",
     "        eta = F.hardtanh(x_raw[:,:,2], min_val=-5, max_val=5).view(-1, self.No, 1)\n",
-    "        sig_eta = 1. + F.elu(x_raw[:,:,3]).view(-1, self.No, 1)\n",
+    "        sig_eta = 1. + 1e-6 + F.elu(x_raw[:,:,3]).view(-1, self.No, 1)\n",
     "        # phi\n",
     "        phi = torch.fmod(torch.abs(x_raw[:,:,4]), 6.2831853072).view(-1, self.No, 1) - 3.14159265359\n",
-    "        sig_phi = 1. + F.elu(x_raw[:,:,5]).view(-1, self.No, 1)\n",
+    "        sig_phi = 1. + 1e-6 + F.elu(x_raw[:,:,5]).view(-1, self.No, 1)\n",
     "        # charge\n",
     "        charge_cat = F.softmax(self.decoder_modules['ChargeDec'](x_raw[:,:,6:].view(-1,2)), dim=1).view(-1, self.No, 3)\n",
     "        # pId\n",
@@ -357,8 +341,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.114151Z",
-     "start_time": "2019-07-07T20:03:44.951Z"
+     "start_time": "2019-07-07T20:12:45.938Z"
     },
     "code_folding": []
    },
@@ -386,8 +369,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.115303Z",
-     "start_time": "2019-07-07T20:03:44.953Z"
+     "start_time": "2019-07-07T20:12:45.939Z"
     }
    },
    "outputs": [],
@@ -407,8 +389,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.116469Z",
-     "start_time": "2019-07-07T20:03:44.955Z"
+     "start_time": "2019-07-07T20:12:45.941Z"
     },
     "code_folding": []
    },
@@ -416,7 +397,7 @@
    "source": [
     "def criterion(x_in, x_out, reduction='mean'):\n",
     "    # Gaussian\n",
-    "    out_gauss = (x_in[:,:,:3] - x_out[:,:,:3])/ x_out[:,:,3:6] + torch.log(x_out[:,:,3:6])\n",
+    "    out_gauss = torch.pow((x_in[:,:,:3] - x_out[:,:,:3])/ x_out[:,:,3:6], 2) + torch.log(x_out[:,:,3:6])\n",
     "    out = torch.sum(out_gauss, dim=2)\n",
     "    \n",
     "    #Cat cross entropy charge\n",
@@ -450,8 +431,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.117598Z",
-     "start_time": "2019-07-07T20:03:44.956Z"
+     "start_time": "2019-07-07T20:12:45.943Z"
     },
     "code_folding": [
      0,
@@ -477,8 +457,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.118761Z",
-     "start_time": "2019-07-07T20:03:44.957Z"
+     "start_time": "2019-07-07T20:12:45.944Z"
     }
    },
    "outputs": [],
@@ -491,8 +470,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.119837Z",
-     "start_time": "2019-07-07T20:03:44.958Z"
+     "start_time": "2019-07-07T20:12:45.945Z"
     },
     "code_folding": [
      3
@@ -522,12 +500,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.121092Z",
-     "start_time": "2019-07-07T20:03:44.959Z"
+     "start_time": "2019-07-07T20:12:45.947Z"
     },
     "code_folding": [
-     2,
-     7
+     2
     ],
     "scrolled": true
    },
@@ -597,6 +573,9 @@
     "            local_x = local_x.cuda(model.N_GPU)\n",
     "        x_prime = model(local_x)\n",
     "        loss = criterion(local_x, x_prime)\n",
+    "        if np.isnan(loss.item()) or np.isinf(loss.item()):\n",
+    "            print('Invalid loss!!!')\n",
+    "            raise\n",
     "        aux_loss += loss.item()\n",
     "        N_batches += 1\n",
     "    loss_history['val'].append(aux_loss/N_batches)\n",
@@ -664,8 +643,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.122296Z",
-     "start_time": "2019-07-07T20:03:44.960Z"
+     "start_time": "2019-07-07T20:12:45.948Z"
     }
    },
    "outputs": [],
@@ -701,8 +679,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.123517Z",
-     "start_time": "2019-07-07T20:03:44.962Z"
+     "start_time": "2019-07-07T20:12:45.949Z"
     },
     "code_folding": [
      3
@@ -753,8 +730,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.124683Z",
-     "start_time": "2019-07-07T20:03:44.963Z"
+     "start_time": "2019-07-07T20:12:45.951Z"
     }
    },
    "outputs": [],
@@ -782,8 +758,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.125812Z",
-     "start_time": "2019-07-07T20:03:44.965Z"
+     "start_time": "2019-07-07T20:12:45.952Z"
     },
     "code_folding": [
      0
@@ -813,8 +788,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.126951Z",
-     "start_time": "2019-07-07T20:03:44.966Z"
+     "start_time": "2019-07-07T20:12:45.954Z"
     },
     "code_folding": [
      0
@@ -849,8 +823,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.128100Z",
-     "start_time": "2019-07-07T20:03:44.968Z"
+     "start_time": "2019-07-07T20:12:45.955Z"
     }
    },
    "outputs": [],
@@ -863,8 +836,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.129256Z",
-     "start_time": "2019-07-07T20:03:44.969Z"
+     "start_time": "2019-07-07T20:12:45.957Z"
     },
     "code_folding": [
      1
@@ -894,8 +866,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.130392Z",
-     "start_time": "2019-07-07T20:03:44.970Z"
+     "start_time": "2019-07-07T20:12:45.958Z"
     }
    },
    "outputs": [],
@@ -909,8 +880,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.131456Z",
-     "start_time": "2019-07-07T20:03:44.971Z"
+     "start_time": "2019-07-07T20:12:45.959Z"
     },
     "code_folding": [
      1
@@ -957,8 +927,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.132724Z",
-     "start_time": "2019-07-07T20:03:44.973Z"
+     "start_time": "2019-07-07T20:12:45.960Z"
     }
    },
    "outputs": [],
@@ -971,8 +940,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.133818Z",
-     "start_time": "2019-07-07T20:03:44.974Z"
+     "start_time": "2019-07-07T20:12:45.961Z"
     }
    },
    "outputs": [],
@@ -992,8 +960,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.135069Z",
-     "start_time": "2019-07-07T20:03:44.975Z"
+     "start_time": "2019-07-07T20:12:45.962Z"
     }
    },
    "outputs": [],
@@ -1012,8 +979,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:04:22.136225Z",
-     "start_time": "2019-07-07T20:03:44.977Z"
+     "start_time": "2019-07-07T20:12:45.963Z"
     }
    },
    "outputs": [],
