dense v3 output plot

--- a/denseAE/dAE_v3.ipynb
+++ b/denseAE/dAE_v3.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:14.856999Z",
-     "start_time": "2019-07-07T20:13:14.854425Z"
+     "end_time": "2019-07-07T20:17:51.034379Z",
+     "start_time": "2019-07-07T20:17:51.031881Z"
     }
    },
    "outputs": [],
@@ -26,8 +26,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.235149Z",
-     "start_time": "2019-07-07T20:13:14.858582Z"
+     "end_time": "2019-07-07T20:17:51.389897Z",
+     "start_time": "2019-07-07T20:17:51.038761Z"
     }
    },
    "outputs": [
@@ -63,8 +63,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.438325Z",
-     "start_time": "2019-07-07T20:13:15.236955Z"
+     "end_time": "2019-07-07T20:17:51.592998Z",
+     "start_time": "2019-07-07T20:17:51.391573Z"
     }
    },
    "outputs": [
@@ -72,13 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[37mgpu-4-culture-plate-sm\u001b[m  Sun Jul  7 13:13:15 2019\n",
+      "\u001b[1m\u001b[37mgpu-4-culture-plate-sm\u001b[m  Sun Jul  7 13:17:51 2019\n",
       "\u001b[36m[0]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[1]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 27'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
-      "\u001b[36m[2]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m  355\u001b[m / \u001b[33m 8114\u001b[m MB | \u001b[1m\u001b[30m4037\u001b[m(\u001b[33m345M\u001b[m)\n",
+      "\u001b[36m[2]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 24'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m  355\u001b[m / \u001b[33m 8114\u001b[m MB | \u001b[1m\u001b[30m4037\u001b[m(\u001b[33m345M\u001b[m)\n",
       "\u001b[36m[3]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 24'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[4]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 25'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
-      "\u001b[36m[5]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 29'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
+      "\u001b[36m[5]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 30'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[6]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 27'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m    0\u001b[m / \u001b[33m 8114\u001b[m MB |\n",
       "\u001b[36m[7]\u001b[m \u001b[34mGeForce GTX 1080\u001b[m |\u001b[31m 26'C\u001b[m, \u001b[32m  0 %\u001b[m | \u001b[36m\u001b[1m\u001b[33m 7141\u001b[m / \u001b[33m 8114\u001b[m MB | \u001b[1m\u001b[30m4037\u001b[m(\u001b[33m7131M\u001b[m)\n"
      ]
@@ -97,8 +97,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.767717Z",
-     "start_time": "2019-07-07T20:13:15.439933Z"
+     "end_time": "2019-07-07T20:17:51.934195Z",
+     "start_time": "2019-07-07T20:17:51.594829Z"
     }
    },
    "outputs": [],
@@ -113,8 +113,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.774079Z",
-     "start_time": "2019-07-07T20:13:15.769384Z"
+     "end_time": "2019-07-07T20:17:51.941323Z",
+     "start_time": "2019-07-07T20:17:51.936203Z"
     }
    },
    "outputs": [],
@@ -129,8 +129,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.777658Z",
-     "start_time": "2019-07-07T20:13:15.775585Z"
+     "end_time": "2019-07-07T20:17:51.944938Z",
+     "start_time": "2019-07-07T20:17:51.942820Z"
     }
    },
    "outputs": [],
@@ -150,8 +150,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.790274Z",
-     "start_time": "2019-07-07T20:13:15.779847Z"
+     "end_time": "2019-07-07T20:17:51.958329Z",
+     "start_time": "2019-07-07T20:17:51.946410Z"
     }
    },
    "outputs": [],
@@ -164,8 +164,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-07T20:13:15.794463Z",
-     "start_time": "2019-07-07T20:13:15.792005Z"
+     "end_time": "2019-07-07T20:17:51.962080Z",
+     "start_time": "2019-07-07T20:17:51.959727Z"
     }
    },
    "outputs": [],
@@ -175,10 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.933Z"
+     "end_time": "2019-07-07T20:18:06.548549Z",
+     "start_time": "2019-07-07T20:17:51.963558Z"
     }
    },
    "outputs": [
@@ -193,7 +194,21 @@
       "QCD is limiting, using it for both val and split\n",
       "Expected 1.69M train\n",
       "Expected 1.69M val\n",
-      "\n"
+      "\n",
+      "Loading Wlnu\n",
+      "Reloading QCD for validation\n",
+      "Loading Zll\n",
+      "Loading ttbar\n",
+      "+--------+----------+-------+-------+\n",
+      "| Sample | Evts tot | Train |  Val  |\n",
+      "+--------+----------+-------+-------+\n",
+      "|  Wlnu  |  2000k   | 1000k | 1000k |\n",
+      "|  qcd   |   690k   |  571k |  571k |\n",
+      "|  Zll   |  1000k   |  113k |  113k |\n",
+      "| ttbar  |  1000k   |   5k  |   5k  |\n",
+      "+--------+----------+-------+-------+\n",
+      "Tot training 1.69 M\n",
+      "Tot val 1.69 M\n"
      ]
     }
    ],
@@ -204,13 +219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.935Z"
+     "end_time": "2019-07-07T20:18:08.383789Z",
+     "start_time": "2019-07-07T20:18:06.551449Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Ato4l (47.7k)\n",
+      "Loading leptoquark (273.6k)\n",
+      "Loading hToTauTau (500.0k)\n",
+      "Loading hChToTauNu (338.5k)\n"
+     ]
+    }
+   ],
    "source": [
     "dataset.loadValidationSamples('BSM')"
    ]
@@ -224,10 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.937Z"
+     "end_time": "2019-07-07T20:18:08.407734Z",
+     "start_time": "2019-07-07T20:18:08.385903Z"
     },
     "code_folding": [
      29,
@@ -338,14 +366,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.938Z"
+     "end_time": "2019-07-07T20:18:08.416724Z",
+     "start_time": "2019-07-07T20:18:08.409147Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AEDenseNet(\n",
+      "  (encoder_modules): ModuleDict(\n",
+      "    (PhiE): Sequential(\n",
+      "      (0): Linear(in_features=100, out_features=70, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=70, out_features=70, bias=True)\n",
+      "      (3): ReLU()\n",
+      "      (4): Linear(in_features=70, out_features=40, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (decoder_modules): ModuleDict(\n",
+      "    (ChargeDec): Sequential(\n",
+      "      (0): Linear(in_features=2, out_features=2, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=2, out_features=3, bias=True)\n",
+      "    )\n",
+      "    (PhiD): Sequential(\n",
+      "      (0): Linear(in_features=40, out_features=70, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=70, out_features=70, bias=True)\n",
+      "      (3): ReLU()\n",
+      "      (4): Linear(in_features=70, out_features=160, bias=True)\n",
+      "    )\n",
+      "    (pdgIdDec): Sequential(\n",
+      "      (0): Linear(in_features=2, out_features=3, bias=True)\n",
+      "      (1): ReLU()\n",
+      "      (2): Linear(in_features=3, out_features=5, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      ")\n",
+      "\n",
+      "Trainable parameters: 34124\n"
+     ]
+    }
+   ],
    "source": [
     "Latent_dimension = int(2*dataset.inputs.shape[1])\n",
     "Hidden_dimension = int(0.5*(Latent_dimension + dataset.inputs.shape[1]*dataset.inputs.shape[2]))\n",
@@ -366,13 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.939Z"
+     "end_time": "2019-07-07T20:18:08.422051Z",
+     "start_time": "2019-07-07T20:18:08.418145Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU not available\n"
+     ]
+    }
+   ],
    "source": [
     "model.useGPU(0)"
    ]
@@ -386,10 +463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.941Z"
+     "end_time": "2019-07-07T20:18:08.431361Z",
+     "start_time": "2019-07-07T20:18:08.423633Z"
     },
     "code_folding": []
    },
@@ -428,10 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.943Z"
+     "end_time": "2019-07-07T20:18:08.435684Z",
+     "start_time": "2019-07-07T20:18:08.432932Z"
     },
     "code_folding": [
      0,
@@ -454,10 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.944Z"
+     "end_time": "2019-07-07T20:18:08.438973Z",
+     "start_time": "2019-07-07T20:18:08.437142Z"
     }
    },
    "outputs": [],
@@ -467,10 +547,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.945Z"
+     "end_time": "2019-07-07T20:18:08.444245Z",
+     "start_time": "2019-07-07T20:18:08.440431Z"
     },
     "code_folding": [
      3
@@ -500,14 +581,22 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.947Z"
+     "start_time": "2019-07-07T20:17:22.112Z"
     },
     "code_folding": [
      2
     ],
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: [#################---]  89% - ETA:    5 s   Loss: 7.48e+01"
+     ]
+    }
+   ],
    "source": [
     "train_loss = []\n",
     "BSM_eff = {'ep': []}\n",
@@ -643,7 +732,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.948Z"
+     "start_time": "2019-07-07T20:17:22.113Z"
     }
    },
    "outputs": [],
@@ -679,7 +768,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.949Z"
+     "start_time": "2019-07-07T20:17:22.114Z"
     },
     "code_folding": [
      3
@@ -730,7 +819,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.951Z"
+     "start_time": "2019-07-07T20:17:22.116Z"
     }
    },
    "outputs": [],
@@ -758,7 +847,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.952Z"
+     "start_time": "2019-07-07T20:17:22.117Z"
     },
     "code_folding": [
      0
@@ -788,18 +877,22 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.954Z"
+     "start_time": "2019-07-07T20:17:22.119Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "for i in range(x_prime.shape[2]):\n",
+    "for i in range(x.shape[2]):\n",
     "    x_aux = x[:,:,i].flatten()\n",
-    "    xp_aux = x_prime[:,:,i].flatten()\n",
+    "    if i <= 3:\n",
+    "        xp_aux = x_prime[:,:,i].flatten()\n",
+    "    elif i==3:\n",
+    "        xp_aux = np.argmax(x_prime[:,:,6:9]).flatten() - 1\n",
+    "    elif i==4:\n",
+    "        xp_aux = np.argmax(x_prime[:,:,9:14]).flatten()\n",
+    "        \n",
     "    f = plt.figure(i)\n",
     "    r = (min(np.min(x_aux), np.min(xp_aux)), max(np.max(x_aux), np.max(xp_aux)))\n",
     "    if i == 0:\n",
@@ -823,7 +916,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.955Z"
+     "start_time": "2019-07-07T20:17:22.120Z"
     }
    },
    "outputs": [],
@@ -836,7 +929,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.957Z"
+     "start_time": "2019-07-07T20:17:22.121Z"
     },
     "code_folding": [
      1
@@ -866,7 +959,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.958Z"
+     "start_time": "2019-07-07T20:17:22.123Z"
     }
    },
    "outputs": [],
@@ -880,7 +973,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.959Z"
+     "start_time": "2019-07-07T20:17:22.124Z"
     },
     "code_folding": [
      1
@@ -927,7 +1020,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.960Z"
+     "start_time": "2019-07-07T20:17:22.127Z"
     }
    },
    "outputs": [],
@@ -940,7 +1033,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.961Z"
+     "start_time": "2019-07-07T20:17:22.128Z"
     }
    },
    "outputs": [],
@@ -960,7 +1053,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.962Z"
+     "start_time": "2019-07-07T20:17:22.129Z"
     }
    },
    "outputs": [],
@@ -979,7 +1072,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-07-07T20:12:45.963Z"
+     "start_time": "2019-07-07T20:17:22.130Z"
     }
    },
    "outputs": [],
