--- a/denseAE/dAE_v2.ipynb
+++ b/denseAE/dAE_v2.ipynb
@@ -880,13 +880,7 @@
       "-------- Anomaly Detection monitor --------\n",
       "SM Mix: [####################]  100% - Tot. time: 11.0 s\n",
       "Ato4l: [#####]  100% - Tot. time: 0.2 s\n",
-      "leptoquark: [####################]  100% - Tot. time: 1.7 s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "leptoquark: [####################]  100% - Tot. time: 1.7 s\n",
       "hToTauTau: [####################]  100% - Tot. time: 3.1 s\n",
       "hChToTauNu: [####################]  100% - Tot. time: 2.2 s\n",
       "+------------+----------+----------+----------+\n",
