up to v6 trained

--- a/denseAE/dAE_v3.ipynb
+++ b/denseAE/dAE_v3.ipynb
@@ -1429,13 +1429,7 @@
       "------------ Anomaly Detection monitor ------------\n",
       "SM Mix: [####################]  100% - Tot. time: 17.8 s\n",
       "Ato4l: [#]  100% - Tot. time: 0.0 s\n",
-      "leptoquark: [######]  100% - Tot. time: 0.6 s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "leptoquark: [######]  100% - Tot. time: 0.6 s\n",
       "hToTauTau: [##############]  100% - Tot. time: 3.0 s\n",
       "hChToTauNu: [#######]  100% - Tot. time: 1.1 s\n",
       "+------------+----------+----------+----------+\n",
@@ -1836,13 +1830,7 @@
       "Loss: -1.54e+01 - Delta: 9.76e-03 - Trend: 2.33e-01\n",
       "Val Loss: -1.52e+01\n",
       "\n",
-      "Epoch   124: reducing learning rate of group 0 to 8.1000e-06.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch   124: reducing learning rate of group 0 to 8.1000e-06.\n",
       "Epoch 125: [####################]  100% - Tot. time: 13.9 s                        \n",
       "Loss: -1.60e+01 - Delta: -6.16e-01 - Trend: -6.26e-01\n",
       "Val Loss: -1.58e+01\n",
@@ -2863,13 +2851,7 @@
       "------------ Anomaly Detection monitor ------------\n",
       "SM Mix: [####################]  100% - Tot. time: 15.9 s\n",
       "Ato4l: [#]  100% - Tot. time: 0.0 s\n",
-      "leptoquark: [######]  100% - Tot. time: 0.5 s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "leptoquark: [######]  100% - Tot. time: 0.5 s\n",
       "hToTauTau: [##############]  100% - Tot. time: 2.6 s\n",
       "hChToTauNu: [#######]  100% - Tot. time: 0.9 s\n",
       "+------------+----------+----------+----------+\n",
@@ -5830,8 +5812,8 @@
     "    r = (min(np.min(x_aux), np.min(xp_aux)), max(np.max(x_aux), np.max(xp_aux)))\n",
     "    if i == 0:\n",
     "        r = (0,10)\n",
-    "    plt.hist(x_aux, bins=30, range=r, alpha=0.4, density=True)\n",
-    "    plt.hist(xp_aux, bins=30, range=r, alpha=0.4, density=True)\n",
+    "    plt.hist(x_aux, bins=31, range=r, alpha=0.4, density=True)\n",
+    "    plt.hist(xp_aux, bins=31, range=r, alpha=0.4, density=True)\n",
     "    plt.xlabel('Particles ' + dataset.feature_names[i])\n",
     "    plt.yscale('log')\n",
     "    dnd.append(f)"
