--- a/denseAE/dAE_v4.ipynb
+++ b/denseAE/dAE_v4.ipynb
@@ -359,6 +359,7 @@
     "        if torch.cuda.is_available():\n",
     "            print('Current device: {} ({} available)'.format(torch.cuda.current_device(), \n",
     "                                                             torch.cuda.device_count()))\n",
+    "            os.environ['CUDA_VISIBLE_DEVICES'] = str(N_GPU)\n",
     "            self.N_GPU = N_GPU\n",
     "            torch.cuda.empty_cache()\n",
     "            self.cuda(N_GPU)\n",
